2000-02-29  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (main): Remove gui code, this will be actual
	filtering code.

	* Makefile: Added filter-editor to the library.

	* filter-editor.c (main): Comment out, make it a proper library.

2000-02-28  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c: Removed unused header.

	* Makefile: Removed references to filter-sexp.[ch].

	* filter-sexp.[ch]: Removed some unecessary includes.  Moved to
	e-util.  Renamed callers.

2000-02-24  NotZed  <NotZed@HelixCode.com>

	* filter-xml.c (filter_description_free): 
	(filter_load_ruleset_free): 
	(filter_load_optionset_free): Functions for memory management.

	* filter-arg.c (filter_arg_copy): Copy the values of one arg into
	another.

	* filter-editor.c: New widget, a dialogue which uses filter-druid
	to present the various editing views.
	(druid_dialogue_clicked): On finish, save the user's new filter
	definition where it came from.

	* filter-druid.c: Changed to just being a notebook with no tabs,
	rather than a full druid (no next/prev/etc buttons).
	(option_name_changed): Update the option's description as the user
	enters it in.

2000-02-22  NotZed  <NotZed@HelixCode.com>

	* filter-xml.c (filter_clone_optionrule):
	(filter_clone_optionrule_free): 
	(filter_optionrule_new_from_rule): New utility functions for
	working with the internal rule format.

	* filter-arg.[ch]: Added new callbacks for editing a single value,
	and a new editor which shows all items in a list, and allows you
	to edit them via the single-edit method.  This needs some cleanup
	for some unused/unusable virtual methods (edit_values,
	write_html?).

	* Makefile: Add the druid for build.

	* filter-druid.c: A 'druid' widget for editing a single filter
	rule.

2000-02-21  Matt Loper  <matt@helixcode.com>

	* .cvsignore: New file.

2000-02-18  NotZed  <NotZed@HelixCode.com>

	* blank/check.xpm: Added forgotten files.

	* Uh, more changes, lots, its still work in progress.
